[WIP] Make the simulator boot asynchronous

--- a/packages/pos/simulator/plugins/system/view/ControlPanel.html
+++ b/packages/pos/simulator/plugins/system/view/ControlPanel.html
@@ -18,7 +18,7 @@
 
 <script>
   import { Registry } from '../../index.js';
-  import { deepCopy } from '../../libs/utils.js';
+  import { deepCopy } from '../../../libs/utils.js';
 
   let lastKeypressTime = 0;
 
