--- a/packages/pos/simulator/plugins/system/view/POS.html
+++ b/packages/pos/simulator/plugins/system/view/POS.html
@@ -26,10 +26,10 @@
 <ControlPanel ref:controlPanel />
 
 <script>
-  import PrinterPanel from '../../../drivers/printer/panel.html';
-  import HttpPanel from '../../../drivers/http/panel.html';
-  import * as HttpSimulation from '../../../drivers/http/simulation.js';
-  import * as PrinterSimulation from '../../../drivers/printer/simulation.js';
+  import PrinterPanel from '../../../../drivers/printer/panel.html';
+  import HttpPanel from '../../../../drivers/http/panel.html';
+  import * as HttpSimulation from '../../../../drivers/http/simulation.js';
+  import * as PrinterSimulation from '../../../../drivers/printer/simulation.js';
 
   export default {
     components: {
