Make view sync again

--- a/packages/pos/simulator/view/hardware/Printer.html
+++ b/packages/pos/simulator/view/hardware/Printer.html
@@ -25,7 +25,7 @@
 </div>
 
 <script>
-  import { HardwareManager } from '../../../index.js';
+  import { HardwareManager } from '../../index.js';
 
   const onceTransitionEnd = (el, cb) => {
     const onTransitionEnd = e => {
