--- a/packages/pos/simulator/view/hardware/Screen.html
+++ b/packages/pos/simulator/view/hardware/Screen.html
@@ -27,7 +27,7 @@
 </svg>
 
 <script>
-  import { System, Registry, HardwareManager } from '../../../index.js';
+  import { System, Registry, HardwareManager } from '../../index.js';
 
   const { hours: initHours, minutes: initMinutes } = System.getCurrentTime();
 
