Fix endPrinting event not being fired

--- a/packages/pos/simulator/view/hardware/Printer.html
+++ b/packages/pos/simulator/view/hardware/Printer.html
@@ -60,7 +60,9 @@
     },
     oncreate() {
       HardwareManager.on('startPrinting', (content, options) => {
-        this.print(content, options).then(HardwareManager.endPrinting);
+        this.print(content, options).then(() =>
+          HardwareManager.fire('endPrinting'),
+        );
       });
     },
     methods: {
