Refactor simulator drivers (#292)
Esse PR começou de um jeito e acabou de outro. Não faz muito sentido "assincronizar" o simulador por agora e só traria complicações nos testes. O PR se resume em uma refatoração dos drivers e plugins internos do simulador para usar o immer.js

--- a/packages/pos/simulator/view/ControlPanel.html
+++ b/packages/pos/simulator/view/ControlPanel.html
@@ -17,8 +17,8 @@
 </div>
 
 <script>
-  import { Registry } from '../../index.js';
-  import { deepCopy } from '../../libs/utils.js';
+  import { Registry } from '../index.js';
+  import { deepCopy } from '../libs/utils.js';
 
   let lastKeypressTime = 0;
 
