--- a/packages/pos/simulator/view/hardware/Keypad.html
+++ b/packages/pos/simulator/view/hardware/Keypad.html
@@ -17,7 +17,7 @@
 </div>
 
 <script>
-  import Keyboard from '../../../../api/keyboard.js';
+  import Keyboard from '../../../api/keyboard.js';
 
   const getKeyboardEvent = (event, code, keyName) =>
     new KeyboardEvent(event, {
