--- a/packages/pos/simulator/view/pos/hardware/CreditCard.html
+++ b/packages/pos/simulator/view/pos/hardware/CreditCard.html
@@ -7,8 +7,8 @@
   ></div>
 
 <script>
-  import { HardwareManager } from '../../index.js';
-  import Payment from '../../../api/payment.js';
+  import { HardwareManager } from '../../../index.js';
+  import Payment from '../../../../api/payment.js';
 
   export default {
     data() {
