--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -27,7 +27,7 @@
 </svg>
 
 <script>
-  import { System, Registry, HardwareManager } from '../../index.js';
+  import { System, Registry, HardwareManager } from '../../../index.js';
 
   const { hours: initHours, minutes: initMinutes } = System.getCurrentTime();
 
@@ -44,8 +44,10 @@
     },
     oncreate() {
       if (localStorage) {
-        const brightnessLevel = Registry.persistent.get().ScreenBrightness.level;
-        this.set({ brightnessLevel });
+        const { ScreenBrightness } = Registry.persistent.get();
+        if (ScreenBrightness && typeof ScreenBrightness.level !== 'undefined') {
+          this.set({ brightnessLevel: ScreenBrightness.level });
+        }
       }
 
       HardwareManager.on('changeBrightness', brightnessLevel => {
