Fix row description size

--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -24,7 +24,7 @@
     {#if _hasDescription}
       <div class="description">
         {#if description}
-          <p>{description}</p>
+          {description}
         {:elseif _hasDescriptionContent}
           <slot name="description"></slot>
         {/if}
