Separate simulator visual wrapper to its own file

--- a/packages/pos/simulator/view/pos/apps/Launcher.html
+++ b/packages/pos/simulator/view/pos/apps/Launcher.html
@@ -44,10 +44,10 @@
 {/if}
 
 <script>
-  import { AppManager, System } from '../../index.js';
-  import { warn } from '../../libs/utils.js';
-  import Card from '../../../api/card.js';
-  import SignalListener from '../../../SignalListener.html';
+  import { AppManager, System } from '../../../index.js';
+  import { warn } from '../../../libs/utils.js';
+  import Card from '../../../../api/card.js';
+  import SignalListener from '../../../../SignalListener.html';
 
   const STATES = {
     LOCKSCREEN: 0,
