--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -7,19 +7,13 @@
   ></div>
 
 <script>
-  import { HardwareManager } from '../../../index.js';
-  import Payment from '../../../../api/payment.js';
+  import { HardwareManager } from '../../index.js';
+  import Payment from '../../../api/payment.js';
 
   export default {
     data() {
       return {
         isCardInserted: false,
-        cardInfo: {
-          brand: 'Master',
-          type: 'debit',
-          pan: '52189300000000',
-          cardholdername: 'JOÃO ROCHA',
-        },
       };
     },
     methods: {
@@ -62,7 +56,7 @@
     left: 45px;
     top: 780px;
     z-index: 1;
-    background-image: url(../assets/creditcard.png);
+    background-image: url(./assets/creditcard.png);
     cursor: pointer;
     transition: transform 0.3s ease, filter 0.3s ease;
     filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.5));
