--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -1,29 +1,14 @@
-{#if _browserEngine === 'webkit'}
-  <div class="wrapper">
-    <div class="container">
-      <div class="pos-wrapper">
-        <div class="shadow"></div>
-        <div class="pos">
-          <Printer ref:printer />
-          <Screen ref:screen>
-            <Launcher />
-          </Screen>
-          <Keypad ref:keypad />
-        </div>
-      </div>
-      <Card ref:card />
-    </div>
-  </div>
-{:else}
-  <div class="engine-alert">
-    Para um rápido desenvolvimento mais fiel ao ambiente do State, é recomendado o uso do <strong><a href="https://www.google.com/chrome/" target="_blank">Chrome</a></strong> como navegador.
-  </div>
-  <div id="app-root">
-    <slot></slot>
-  </div>
-{/if}
 
-<ControlPanel ref:controlPanel />
+<div class="pos-wrapper">
+  <div class="shadow"></div>
+  <div class="pos">
+    <Printer ref:printer />
+      <Screen ref:screen>
+        <slot></slot>
+      </Screen>
+    <Keypad ref:keypad />
+  </div>
+</div>
 
 <script>
   export default {
@@ -31,74 +16,20 @@
       Printer: './hardware/Printer.html',
       Keypad: './hardware/Keypad.html',
       Screen: './hardware/Screen.html',
-      Card: './hardware/CreditCard.html',
-      ControlPanel: './ControlPanel.html',
-      Launcher: './Launcher.html',
-    },
-    data() {
-      return {
-        _browserEngine: 'webkit',
-      };
-    },
-    oncreate() {
-      /**
-       * Remove the 'app-root' id from the body, since
-       * its replaced by the 'app-root' inside the <Screen />
-       * */
-      document.body.removeAttribute('id');
-
-      /**
-       * Detect if we're running on a webkit environment.
-       * We check for `edge` because it fakes one.
-       */
-      const _browserEngine =
-        'WebkitAppearance' in document.documentElement.style &&
-        !/edge/i.test(navigator.userAgent)
-          ? 'webkit'
-          : 'other';
-
-      /**
-       * Set the render engine to a body attribute
-       * to make our css a bit smarter since we depend heavily on webkit.
-       * */
-      document.documentElement.setAttribute('engine', _browserEngine);
-      document.documentElement.setAttribute('virtual-pos', '');
-      this.set({ _browserEngine });
     },
   };
 </script>
 
 <style type="text/postcss">
-  @import './style.pcss';
-
   @media (max-width: 400px) {
-    :global(body),
-    .wrapper,
-    .container,
     .pos-wrapper,
     .pos {
       height: 100%;
     }
-
-    :global(body) {
-      @extend %hide-scrollbar;
-    }
   }
 
   @media (min-width: 401px) {
-    .wrapper {
-      display: flex;
-      height: 100vh;
-      width: 100%;
-      align-items: center;
-      justify-content: center;
-      background-image: url(./assets/wood.jpg);
-      background-size: cover;
-      overflow: hidden;
-    }
-
-    .container {
-      display: flex;
+    .pos-wrapper {
       position: relative;
     }
 
@@ -131,39 +62,6 @@
         animation: shadow 0.8s ease-out forwards;
         transform: translate(15px, 15px);
       }
-    }
-  }
-
-  .engine-alert {
-    position: static;
-    z-index: 100000;
-    width: 100%;
-    padding: 10px 75px;
-    background-color: #bf4130;
-    color: #fff;
-    font-size: 16px;
-    text-align: center;
-    animation: 2s ease-in-out blink infinite;
-    pointer-events: none;
-
-    a {
-      text-decoration: underline;
-      color: #fff;
-      pointer-events: auto;
-    }
-  }
-
-  @keyframes blink {
-    0% {
-      opacity: 0.4;
-    }
-
-    50% {
-      opacity: 0.9;
-    }
-
-    100% {
-      opacity: 0.4;
     }
   }
 </style>
