--- a/packages/pos/simulator/view/pos/hardware/Keypad.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad.html
@@ -67,6 +67,12 @@
 
 <style type="text/postcss">
   .keypad {
+    position: absolute;
+    width: 292px;
+    height: 158px;
+    bottom: 20px;
+    left: 18px;
+
     @media (max-width: 400px) {
       display: none;
     }
