Better click/drag separation

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -10,7 +10,6 @@
 
 <script>
   import { HardwareManager } from '../../index.js';
-  import Payment from '../../../api/payment.js';
 
   export default {
     data() {
@@ -21,65 +20,48 @@
     oncreate() {
       const cardEl = this.refs.card;
 
-      let mouseStartPos = {};
-      let elPos = {};
+      let mouseStartPos = null;
+      let elPos = null;
+      let nfcTimeout;
 
-      cardEl.style.position = 'absolute';
+      const reset = () => {
+        clearTimeout(nfcTimeout);
+        nfcTimeout = null;
+
+        this.set({ isDragging: false, isAboveScreen: false });
+
+        cardEl.style.top = '';
+        cardEl.style.left = '';
+
+        mouseStartPos = null;
+        elPos = null;
+      };
 
       const checkAboveScreen = (x, y) =>
         Array.from(document.elementsFromPoint(x, y)).some(n =>
           n.classList.contains('screen'),
         );
 
-      cardEl.addEventListener('mousedown', e => {
-        this.set({ isDragging: true });
+      const onMousedown = e => {
+        mouseStartPos = { x: e.clientX, y: e.clientY };
+        elPos = { x: cardEl.offsetLeft, y: cardEl.offsetTop };
+      };
 
-        mouseStartPos = {
-          x: e.clientX,
-          y: e.clientY,
-        };
-
-        elPos = {
-          x: cardEl.offsetLeft,
-          y: cardEl.offsetTop,
-        };
-      });
-
-      cardEl.addEventListener('mouseup', e => {
-        const isAboveScreen = checkAboveScreen(e.clientX, e.clientY);
-
-        this.set({
-          isDragging: false,
-          isAboveScreen,
-        });
-
-        if (!isAboveScreen) {
-          cardEl.style.top = '';
-          cardEl.style.left = '';
-        }
-
+      const onMouseup = e => {
         if (mouseStartPos.x === e.clientX && mouseStartPos.y === e.clientY) {
           this.toggleCard();
         }
-      });
+        reset();
+      };
 
-      document.body.addEventListener('mouseout', () => {
-        this.set({
-          isDragging: false,
-        });
-
-        cardEl.style.top = '';
-        cardEl.style.left = '';
-      });
-
-      document.body.addEventListener('mousemove', e => {
-        if (!this.get().isDragging) {
+      const onMousemove = e => {
+        if (!mouseStartPos) {
           return;
         }
 
-        this.set({
-          isAboveScreen: checkAboveScreen(e.clientX, e.clientY),
-        });
+        if (!this.get().isDragging) {
+          this.set({ isDragging: true });
+        }
 
         const newPos = {
           x: elPos.x + e.clientX - mouseStartPos.x,
@@ -87,6 +69,33 @@
         };
         cardEl.style.left = `${newPos.x}px`;
         cardEl.style.top = `${newPos.y}px`;
+
+        const isAboveScreen = checkAboveScreen(e.clientX, e.clientY);
+
+        this.set({ isAboveScreen });
+
+        if (isAboveScreen) {
+          if (!nfcTimeout) {
+            nfcTimeout = setTimeout(() => {
+              HardwareManager.fire('nfcStart');
+            }, 1000);
+          }
+        } else {
+          clearTimeout(nfcTimeout);
+          nfcTimeout = null;
+        }
+      };
+
+      cardEl.addEventListener('mousedown', onMousedown);
+      cardEl.addEventListener('mouseup', onMouseup);
+      document.body.addEventListener('mouseout', reset);
+      document.body.addEventListener('mousemove', onMousemove);
+
+      this.on('destroy', () => {
+        cardEl.removeEventListener('mousedown', onMousedown);
+        cardEl.removeEventListener('mouseup', onMouseup);
+        document.body.removeEventListener('mouseout', reset);
+        document.body.removeEventListener('mousemove', onMousemove);
       });
     },
     methods: {
@@ -96,7 +105,6 @@
 
         if (isInserted) {
           setTimeout(() => {
-            Payment.cardEvent();
             HardwareManager.fire('toggleCard', true);
           }, 500);
         } else {
@@ -154,7 +162,7 @@
 
     &.is-above-screen {
       opacity: 0.8;
-      transform: rotateZ(-35deg);
+      transform: rotateZ(-25deg);
     }
 
     &.is-inserted {
