--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -146,13 +146,12 @@
       filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
 
-    &:not(.is-dragging) {
-      transition: transform 0.3s ease, filter 0.3s ease, opacity 0.3s ease,
-        top 0.3s ease, left 0.3s ease;
-    }
-
     &:hover {
       transform: scale(1.04);
+    }
+
+    &.is-dragging:not(.is-above-screen) {
+      filter: drop-shadow(18px 18px 2px rgba(0, 0, 0, 0.5));
     }
 
     &.is-dragging,
