--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -15,6 +15,8 @@
     data() {
       return {
         isInserted: false,
+        isDragging: false,
+        isAboveScreen: false,
       };
     },
     oncreate() {
