--- a/packages/pos/simulator/view/pos/Wrapper.html
+++ b/packages/pos/simulator/view/pos/Wrapper.html
@@ -1,7 +1,5 @@
 {#if ENGINE === 'webkit'}
-  <div
-    class="container"
-  >
+  <div class="container">
     <div style="position: relative;">
       <POS ref:POS>
         <Launcher />
