Graceful card return animation

--- a/packages/pos/simulator/view/pos/hardware/Printer.html
+++ b/packages/pos/simulator/view/pos/hardware/Printer.html
@@ -26,14 +26,7 @@
 
 <script>
   import { HardwareManager } from '../../../index.js';
-
-  const onceTransitionEnd = (el, cb) => {
-    const onTransitionEnd = e => {
-      cb(e);
-      el.removeEventListener('transitionend', onTransitionEnd);
-    };
-    el.addEventListener('transitionend', onTransitionEnd);
-  };
+  import { onceTransitionEnd } from '../utils.js';
 
   let shreddingPromise = null;
 
