--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -26,14 +26,14 @@
       let elPos = null;
       let nfcTimeout;
 
-      const reset = () => {
+      const resetDrag = () => {
         clearTimeout(nfcTimeout);
         nfcTimeout = null;
 
-        this.set({ isDragging: false, isAboveScreen: false });
-
         cardEl.style.top = '';
         cardEl.style.left = '';
+
+        this.set({ isDragging: false, isAboveScreen: false });
 
         mouseStartPos = null;
         elPos = null;
@@ -53,7 +53,7 @@
         if (mouseStartPos.x === e.clientX && mouseStartPos.y === e.clientY) {
           this.toggleCard();
         }
-        reset();
+        resetDrag();
       };
 
       const onMousemove = e => {
@@ -90,13 +90,13 @@
 
       cardEl.addEventListener('mousedown', onMousedown);
       cardEl.addEventListener('mouseup', onMouseup);
-      document.body.addEventListener('mouseout', reset);
+      document.body.addEventListener('mouseout', resetDrag);
       document.body.addEventListener('mousemove', onMousemove);
 
       this.on('destroy', () => {
         cardEl.removeEventListener('mousedown', onMousedown);
         cardEl.removeEventListener('mouseup', onMouseup);
-        document.body.removeEventListener('mouseout', reset);
+        document.body.removeEventListener('mouseout', resetDrag);
         document.body.removeEventListener('mousemove', onMousemove);
       });
     },
@@ -142,23 +142,24 @@
     background-image: url(./assets/creditcard.png);
     cursor: pointer;
     filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.5));
-    transition: transform 0.3s ease, filter 0.3s ease, opacity 0.3s ease;
-
-    &:not(:hover):not(.is-inserted) {
-      filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
-    }
+    transition: all 0.3s ease;
 
     &:hover {
       transform: scale(1.04);
     }
 
-    &.is-dragging:not(.is-above-screen) {
-      filter: drop-shadow(18px 18px 2px rgba(0, 0, 0, 0.5));
+    &:not(:hover):not(.is-inserted) {
+      filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
 
-    &.is-dragging,
-    &.is-above-screen {
+    &.is-dragging {
       z-index: 999999;
+      cursor: grabbing;
+      transition: all 0.3s ease, top 0s, left 0s;
+
+      &:not(.is-above-screen) {
+        filter: drop-shadow(18px 18px 6px rgba(0, 0, 0, 0.5));
+      }
     }
 
     &.is-above-screen {
