Add correct switch styles

--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -1,3 +1,8 @@
+$black: #000;
+
+$white: #fff;
+$seashell: #f1f1f1;
+
 $stone-green: #4fb341;
 $stone-green-dark: #153522;
 
@@ -5,13 +10,11 @@ $gray-darker: #353535;
 $gray: #757575;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
+$silver: #bab9b9;
 
 $red-light: #e85b5b;
 
 /* --- */
-
-$black: #000;
-$white: #fff;
 
 $blue: #2196f3;
 $blue-dark: #1565c0;
