--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -8,12 +8,23 @@ $app-bg-color: $gray-lighter;
 
 $default-text-color: $gray-darker;
 
+/** Row component */
 $row-border-color: $gray-lighter;
 
+/** Input component */
 $input-border-color: $gray-lighter;
 $input-focus-border-color: $stone-green;
 $input-invalid-border-color: $red-light;
 $input-error-color: $red-light;
 
+/** Dialog component */
 $dialog-negative-color: $red-light;
 $dialog-positive-color: $stone-green;
+
+/** Switch component */
+$switch-unchecked-bg: $silver;
+$switch-unchecked-color: $seashell;
+$switch-checked-bg: rgba($green, 0.5);
+$switch-checked-color: $green;
+$switch-disabled-bg: $silver;
+$switch-disabled-color: $silver;
