Add row styles to pcss

--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -2,7 +2,9 @@ $stone-green: #4fb341;
 $stone-green-dark: #153522;
 
 $gray-darker: #353535;
+$gray-dark: #494949;
 $gray: #757575;
+$gray-light: #7e7e7e;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
 
@@ -24,9 +26,6 @@ $green: #4ebf1a;
 $grean-light: #4caf50;
 $green-dark: #3da10f;
 $green-payment: #429841;
-
-$gray-dark: #494949;
-$gray-light: #b5b5b5;
 
 $purple: #ab47bc;
 $purple-dark: #790e8b;
