--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -9,6 +9,9 @@ $app-bg-color: $gray-lighter;
 $default-text-color: $gray-darker;
 
 $row-border-color: $gray-lighter;
+$row-bg-color: $white;
+$row-primary-color: $gray-darker;
+$row-secondary-color: $gray-light;
 
 $input-border-color: $gray-lighter;
 $input-focus-border-color: $stone-green;
