--- a/packages/components/Icon/Icon.html
+++ b/packages/components/Icon/Icon.html
@@ -29,7 +29,7 @@
       },
       style({ src, color, width, height }) {
         return [
-          color && `background-color: ${color}`,
+          color && `color:${color}; background-color: ${color}`,
           /* istanbul ignore next */
           src && `-webkit-mask-image: url(${src})`,
           width && `width: ${width}`,
@@ -122,10 +122,10 @@
   }
 
   [symbol='wifi'][level='1'] {
-    background: linear-gradient(to bottom, #b5b5b5 60%, #494949 0%);
+    background: linear-gradient(to bottom, #b5b5b5 60%, currentColor 0%);
   }
 
   [symbol='wifi'][level='2'] {
-    background: linear-gradient(to bottom, #b5b5b5 37%, #494949 0%);
+    background: linear-gradient(to bottom, #b5b5b5 37%, currentColor 0%);
   }
 </style>
